@@ -1,3 +1,7 @@
+zg 17.11.2016 11:48:08 +0200 - build 4842
+
+1. 0003352: CtrlC сбрасывает состояние "неизменённый текст".
+
 zg 16.11.2016 14:48:22 +0200 - build 4841
 
 1. таскание диалога мышью и клавиатурой разделены.
